<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/athensGray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultViewMargin"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/defaultViewMargin"
        android:background="@drawable/bg_shape_white_5_radius"
        android:minHeight="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerTextView"
            style="@style/H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/peer_power"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/L2.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultViewMargin"
            android:layout_marginTop="@dimen/defaultViewMargin"
            android:layout_marginEnd="@dimen/defaultViewMargin"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="@+id/emailTextView"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/passwordTextView"
            style="@style/L2.Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultViewMargin"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/emailTextView"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="@+id/emailTextView"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/loginFailedTextView"
            style="@style/L3.Red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/please_check_your_password_and_try_again"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <CheckBox
            android:id="@+id/keepLogInCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/loginFailedTextView" />

        <TextView
            style="@style/L2.Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged_in"
            app:layout_constraintBottom_toBottomOf="@+id/keepLogInCheckBox"
            app:layout_constraintStart_toEndOf="@+id/keepLogInCheckBox"
            app:layout_constraintTop_toTopOf="@+id/keepLogInCheckBox" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/MaterialTextButton.H1.WhiteDodgerBlue"
        android:layout_width="0dp"
        android:layout_height="@dimen/defaultButtonHeight"
        android:layout_marginStart="@dimen/defaultViewMargin"
        android:layout_marginTop="@dimen/defaultViewMargin"
        android:layout_marginEnd="@dimen/defaultViewMargin"
        android:layout_marginBottom="@dimen/defaultViewMargin"
        android:text="@string/login"
        app:cornerRadius="@dimen/defaultViewRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginViewLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>