<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/athensGray"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/myProfileTextView"
        style="@style/L2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/my_profile"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/dustyGray"
        app:layout_constraintTop_toBottomOf="@+id/myProfileTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/line3">

        <TextView
            android:id="@+id/nameTitleTextView"
            style="@style/L2.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/L2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTitleTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="PeerPower" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:background="@color/dustyGray"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <TextView
            android:id="@+id/emailTitleTextView"
            style="@style/L2.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/L2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailTitleTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="test@peerpower.co.th" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dustyGray"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        style="@style/MaterialTextButton.H1.WhiteDodgerBlue"
        android:layout_width="0dp"
        android:layout_height="@dimen/defaultButtonHeight"
        android:layout_marginStart="@dimen/defaultViewMargin"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/defaultViewMargin"
        android:layout_marginBottom="@dimen/defaultViewMargin"
        android:text="@string/logout"
        app:cornerRadius="@dimen/defaultViewRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>